--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -18,7 +18,7 @@
              </div>
              <div class="move">
                  <div class="home">
-                     <a href="#home_page.html"><img src="../images/ctrl.png"></a>
+                     <a href="#home-page-part.html"><img src="../images/ctrl.png"></a>
                  </div>
                  <div class="left-menu">
                      <div class="left-menu-first">
@@ -992,8 +992,7 @@
                                          <h3 style="position: relative;top: -368px;left: 761px">按猪舍</h3>
                                          <div id="maon" class="pictable2" style="width: 600px;height:400px;"></div>
                                      </div>
-                                     <script src="../vendors/Echarts/echarts.js"></script>
-                                     <script src="../build/js/pictable.js"></script>
+
                                      <!--第二个表格-->
                                      <table class="table table-striped mt10 tabtable table-2" id="stockstable" style="border: 1px solid #cccccc">
                                          <thead>
@@ -1332,5 +1331,7 @@
      <script src="../vendors/JQuery/jquery-2.1.4.min.js"></script>
      <script src="../build/js/home_page.js"></script>
      <script src="../vendors/page/paginathing.js"></script>
+     <script src="../vendors/Echarts/echarts.js"></script>
+     <script src="../build/js/pictable.js"></script>
 </body>
 </html>
