--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -992,8 +992,8 @@
                                          <h3 style="position: relative;top: -368px;left: 761px">按猪舍</h3>
                                          <div id="maon" class="pictable2" style="width: 600px;height:400px;"></div>
                                      </div>
-                                     <script src="../vendors/Echarts/echarts.js"></script>
-                                     <script src="../build/js/pictable.js"></script>
+                                     <script src="https://heidongbuhei.github.io/test/vendors/Echarts/echarts.js"></script>
+                                     <script src="https://heidongbuhei.github.io/test/build/js/pictable.js"></script>
                                      <!--第二个表格-->
                                      <table class="table table-striped mt10 tabtable table-2" id="stockstable" style="border: 1px solid #cccccc">
                                          <thead>
